@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-19T01:07:50Z",
+  "timestamp" : "2022-05-19T08:15:36Z",
   "count_outdated" : 269,
   "uniques_outdated" : 135,
-  "count" : 310,
-  "uniques" : 161,
+  "count" : 311,
+  "uniques" : 162,
   "clones" : [
     {
       "timestamp": "2022-05-05T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-05-18T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
