@@ -1,6 +1,6 @@
 {
-  "count": 41,
-  "uniques": 13,
+  "count": 42,
+  "uniques": 14,
   "clones": [
     {
       "timestamp": "2022-05-05T00:00:00Z",
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-05-18T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-19T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
