@@ -1,3 +1,10 @@
+2022-05-19T08:15:36Z:
+* notice: last 14d: unq all: 14 42
+* notice: prev accum: outdated-unq outdated-all / unq all: 135 269 / 161 310
+* notice: next accum: outdated-unq outdated-all / unq all: 135 269 / 162 311
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: changed dates: [2022-05-19]
+
 2022-05-19T01:07:50Z:
 * notice: last 14d: unq all: 13 41
 * notice: prev accum: outdated-unq outdated-all / unq all: 133 267 / 160 308
